Fix naming and layout bugs

--- a/style.sass
+++ b/style.sass
@@ -112,7 +112,7 @@ body
         background-color: $hover-grey
     .time_format_btn-select
       background-color: $medium-green
-      border-color: $medium-green
+      border-color: $medium-green !important
       color: white
       cursor: default
       &:hover
